--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,9 +5,11 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_navigation">NavigationActivity</string>
     <string name="hardware_title">Hardware</string>
+    <string name="memory_title">Memory</string>
     <string name="get_sys_info">Retrieving System Info</string>
     <string name="disk_info">Disk Information</string>
     <string name="net_info">Network Information</string>
     <string name="sys_info">System Information</string>
+    <string name="free_mem">Calculate free memory</string>
 
 </resources>
