Cleaned up preference tree clicking and navigation, now follows guidelines. Also added new security package for upcoming snippets.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,5 +16,6 @@
   	<string name="mode_lose_prefix">Game Over\nScore: </string>
   	<string name="mode_lose_suffix">\nPress Up To Play</string>
     <string name="snake_layout_text_text">Snake</string>
+    <string name="security_title">Security</string>
 
 </resources>
